--- a/css/style.css
+++ b/css/style.css
@@ -228,12 +228,13 @@ img {
 }
 
 .album, .foto_portfolio {
-    margin: 2.5% 5% 2.5% 5%;
+    margin: 2.5% 4% 2.5% 4%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     height: auto;
     max-width: 40%;
+    /*min-width: 30%;*/
     z-index: 2;
 }
 
